# keras-rs

./: Cargo.toml
examples/mnist/: main.rs  parse.rs
src/: array.rs  attention.rs  dense.rs  embedding.rs  lib.rs  linear.rs  model.rs  named.rs  network.rs
src/activation/: mod.rs  relu.rs  sigmoid.rs  softmax.rs
src/cost/: mod.rs  mse.rs
src/optimise/: adam.rs  mod.rs  sgd.rs
