[package]
name = "keras-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.16" }
rand = "0.8"
rand_distr = "0.4"

[dev-dependencies]
nom = "7.0"

[target.'cfg(target_os = "macos")'.dev-dependencies]
ndarray = { version = "0.16", features = ["blas"] }
blas-src = { version = "0.9", features = ["accelerate"] }
